 _____________________________________________________________________________
/                                                                             \
| Chirpy! v0.4                                                     YYYY-MM-DD |
\_____________________________________________________________________________/

* ...

 _____________________________________________________________________________
/                                                                             \
| Chirpy! v0.3                                                     2007-02-09 |
\_____________________________________________________________________________/

* Added statistics page
* Users can now revert their vote if, for example, they accidentally clicked
  on the wrong link
* Now keeping (and displaying) vote counts per quote
* Radically changed order of top and bottom quotes, by introducing quote
  scores: score = (positive votes + 1) / (negative votes + 1), as suggested by
  sp3000 at irc.mozilla.org #bs on 2006-10-28
* Added metadata-based logging, including search
* Made rating and reporting links use POST instead of GET and added
  intermediate confirmation page for non-AJAX users
* Added microsummaries
* You can now edit quotes before approving them
* Added wildcard searching
* Made tag cloud ignore unapproved quotes
* Tag cloud can now use logarithmic calculation, to make tag use distribution
  appear more even
* Added dynamic tag cloud pruning based on number of quotes
* Administrative interface now only displays tabs that are available
* Improved and simplified captcha support; added preliminary support for
  GD::SecurityImage as an alternative for Authen::Captcha; to enable captchas,
  simply webapp.captcha_provider=Authen_Captcha should suffice
* Made pages point to their own feeds instead of QotW (where applicable)
* Added description field in chirpy.ini, for use in feeds
* Made quote titles in feeds more meaningful
* Put page title in feed title instead of subtitle