@@ -117,14 +117,6 @@ sub new {
 	return undef;
 }
 
-sub DESTROY {
-	my $self = shift;
-	unless ($self->read_only()) {
-		$self->atime(time);
-		$self->update();
-	}
-}
-
 sub param {
 	my ($self, %params) = @_;
 	my $name;
@@ -178,6 +170,10 @@ sub remote_addr {
 
 sub update {
 	my $self = shift;
+	if ($self->id() eq '71c6a6ea3720a637dfb8fd703cc2553a') {
+		require Data::Dumper;
+		print "\n", Data::Dumper::Dumper($self->data());
+	}
 	$self->{'dm'}->modify_session($self->id(), $self->data());
 }
 
